<resources>
    <string name="app_name">Cv Maker</string>
    <string name="ai_resume_spark">AI <font color="#0085FF">Resume Spark</font></string>
    <string name="boost_your_career_with_smart_resumes">Boost Your Career with \nSmart Resumes.</string>
    <string name="get_started">Get Started</string>
    <string name="select_language">Select Language</string>
    <string name="selected_fmt">Select Lanhuage first</string>
    <string name="app_language">App Language</string>
    <string name="done">Done</string>
    <string name="onboarding_title_1">Create Your Perfect Resume</string>
    <string name="onboarding_title_2">AI Cover Letter Writer</string>
    <string name="onboarding_title_3"><![CDATA[Download & Share Instantly]]></string>
    <string name="onboarding_desc_1">Quickly create a standout CV using our easy-to-use templates and customization options.</string>
    <string name="onboarding_desc_2">Generate a personalized, professional cover letter in seconds.</string>
    <string name="onboarding_desc_3"><![CDATA[Export as PDF, Word, image & share with a single tap]]></string>
    <string name="ai_powered_ncv_maker">Ai <font color="#0085FF">Powered \nCV Maker</font></string>
    <string name="home">Home</string>
    <string name="templates">Templates</string>
    <string name="create">Create</string>
    <string name="question">Question</string>
    <string name="tools">Tools</string>
    <string name="profile">Profile</string>
    <string name="draft">Draft</string>
    <string name="mayer_sabilla">Mayer Sabila</string>
    <string name="_20_mar_2024">20 Oct 2025</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="what_do_you_want_to_create">What do you want to create?</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="create_profile">Create Profile</string>
    <string name="general">General</string>
    <string name="others">Others</string>
    <string name="personal_details">Personal Details</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="skills">Skills</string>
    <string name="objective">Objective</string>
    <string name="references">References</string>
    <string name="projects">Projects</string>
    <string name="interest">Interest</string>
    <string name="portfolio">Portfolio</string>
    <string name="certification">Certification</string>
    <string name="achievements">Achievements</string>
    <string name="languages">Languages</string>
    <string name="preview">Preview</string>
    <string name="name">Name</string>
    <string name="jessika">Jessika</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Adress</string>
    <string name="enter_address">Enter your adress</string>
    <string name="add_education">Add Education</string>
    <string name="details">Details</string>
    <string name="enter_your_adress">Enter your adress</string>
    <string name="currently_working">Currently Working</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="designation">Designation</string>
    <string name="company_name">Company Name</string>
    <string name="add_more">Add more</string>
    <string name="course_degree">Course/Degree</string>
    <string name="institute">Institute</string>
    <string name="grades">Grades</string>
    <string name="currently_a_student">Currently a Student</string>
    <string name="title">Title</string>
    <string name="organization_issuer">Organization / Issuer</string>
    <string name="year_date">Year / Date</string>
    <string name="description">Description</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="language">Language</string>
    <string name="mm_yy">MM/YY</string>
    <string name="grade">Grade</string>
    <string name="present">Present</string>
    <string name="remove_section">Remove Section</string>
    <string name="remove_selection">Are you sure you want to remove this section?</string>
    <string name="remove">Remove</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_your_birth_date">Enter your birth date</string>
    <string name="dateofbithmsg">your date of birth should be less than current date</string>
    <string name="android_developer">Android Developer</string>
    <string name="ddesignation">Designation</string>
    <string name="hi_tech_technologies">Hi-Technologies</string>
    <string name="skill_name">Skill Name</string>
    <string name="skill_level">Skill Level</string>
    <string name="dublicate_email_founded">Dublicate email founded</string>
    <string name="project_title">Project Title</string>
    <string name="saved">Saved</string>
    <string name="saved_successfully">Saved Successfuly</string>
    <string name="craft_standout_cover_letter">Craft Standout Cover Letter</string>
    <string name="write_cover_letter">Write Cover Letter</string>
    <string name="edit_and_create_your_cv">Edit and Create Your CV</string>
    <string name="create_cv_resume">Create CV / Resume</string>
    <string name="employee_of_the_year">Employee of the year</string>
    <string name="nust_university">NUST University</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="a">A+</string>
    <string name="select_a_template">Select a Template</string>
    <string name="generate_cv">Generate CV</string>
    <string name="loading_cv_0">Loading CV... 0%</string>
    <string name="download_cv">Download CV</string>
    <string name="create_your_own_resume_like_a_npro">Create your own resume like a \nPro</string>
    <string name="create_cv">Create Cv</string>
    <string name="get_hired_right_away">Get Hired Right Away</string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="edit_and_create_your_profile">Edit and Create Your Profile</string>
    <string name="ai_cover_letter">AI Cover Letter</string>
    <string name="other_letters">Other Letters</string>
    <string name="see_all">See all ›</string>
    <string name="resignation_nletter">Resignation \nLetter</string>
    <string name="promotion_nletter">Promotion \nLetter</string>
    <string name="reference_nletter">Reference \nLetter</string>
    <string name="trending_templates">Trending Templates</string>
    <string name="pro">Pro</string>
</resources>