<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottomsheet_rounded"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:id="@+id/handler"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/remove_section"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Message -->
        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/remove_selection"
            android:textColor="#7A7A7A"
            android:textSize="15sp" />

        <!-- Buttons Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:layout_weight="1"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/_22sdp"
                app:cardElevation="0dp"
                app:strokeColor="#1A31311A"
                app:strokeWidth="@dimen/_1sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"

                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/cancel"
                    android:textColor="#222222"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="12dp"
                android:layout_height="match_parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnRemove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="#DC3131"
                app:cardCornerRadius="@dimen/_22sdp"
                app:cardElevation="0dp"
                app:cornerRadius="@dimen/_22sdp"
                app:strokeWidth="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/remove"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
