<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:fontFamily="@font/poppins_regular"
        android:padding="@dimen/_3sdp"
        android:text="@string/institute"
        android:textColor="#192223"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/titledetailicn"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:padding="@dimen/_3sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <TextView
            android:id="@+id/company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:drawableStart="@drawable/company_icon"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|center_vertical"
            android:text="@string/company_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toStartOf="@id/view_institutedetailicn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/removeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/remove"
            app:layout_constraintBottom_toBottomOf="@id/view_institutedetailicn"
            app:layout_constraintEnd_toStartOf="@id/view_institutedetailicn"
            app:layout_constraintTop_toTopOf="@id/view_institutedetailicn" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/view_institutedetailicn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/collapsse"
            app:layout_constraintBottom_toBottomOf="@id/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/company"
            app:layout_constraintTop_toTopOf="@id/company" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/data_constraint"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/company"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/company_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/ic_bg_pro"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|center_vertical"
            android:hint="@string/hi_tech_technologies"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingStart="@dimen/_15sdp"
            android:textColor="@color/gray_tx_color"
            android:textColorHint="@color/gray_tx_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:drawableStart="@drawable/designation_icon"
            android:drawablePadding="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|center_vertical"
            android:text="@string/ddesignation"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_edittext" />


        <EditText
            android:id="@+id/designation_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/ic_bg_pro"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|center_vertical"
            android:hint="@string/android_developer"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingStart="@dimen/_15sdp"
            android:textColor="@color/gray_tx_color"
            android:textColorHint="@color/gray_tx_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/designation" />


        <TextView
            android:id="@+id/start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:drawableStart="@drawable/calendar_icon"
            android:drawablePadding="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|center_vertical"
            android:text="@string/start_date"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toStartOf="@id/end_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/designation_edittext" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:drawableStart="@drawable/calendar_icon"
            android:drawablePadding="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|center_vertical"
            android:text="@string/end_date"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_date"
            app:layout_constraintTop_toBottomOf="@+id/designation_edittext" />


        <EditText
            android:id="@+id/start_date_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/ic_bg_pro"
            android:drawableEnd="@drawable/calendar_gray"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|center_vertical"
            android:hint="@string/mm_yy"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor="@color/gray_tx_color"
            android:textColorHint="@color/gray_tx_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toStartOf="@id/end_date_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_date" />


        <EditText
            android:id="@+id/end_date_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/ic_bg_pro"
            android:drawableEnd="@drawable/calendar_gray"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|center_vertical"
            android:hint="@string/mm_yy"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor="@color/gray_tx_color"
            android:textColorHint="@color/gray_tx_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_date_edittext"
            app:layout_constraintTop_toBottomOf="@+id/start_date" />


        <CheckBox
            android:id="@+id/checkboxfordate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/currently_working"
            android:textColor="@color/gray_tx_color"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_date_edittext" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:drawableStart="@drawable/details_icon"
            android:drawablePadding="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|center_vertical"
            android:text="@string/details"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toStartOf="@id/end_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkboxfordate" />


        <EditText
            android:id="@+id/detail_edit_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/ic_bg_pro"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start"
            android:lines="7"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor="@color/gray_tx_color"
            android:textColorHint="@color/gray_tx_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
