<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_top_corners">


    <ImageView
        android:id="@+id/bottomSheetGrapple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_19sdp"
        android:src="@drawable/top_image_createprofile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="@dimen/_5sdp"
        android:text="@string/what_do_you_want_to_create"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomSheetGrapple"
         />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_cv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/profile_bottomsheet_create_cv"
        android:padding="@dimen/_9sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@id/ai_cover_letter"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/cvImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cv_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/cv_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:paddingTop="@dimen/_10sdp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/create_cv_resume"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:fontFamily="@font/poppins_semi_bold"
            app:layout_constraintBottom_toTopOf="@id/cv_subtext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvImage"
            />

        <TextView
            android:id="@+id/cv_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/edit_and_create_your_cv"
            android:textAlignment="center"
            android:textColor="@color/gray_tx_color"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_txt" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ai_cover_letter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/cover_letter_bg"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/create_cv"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintVertical_bias="0">


        <ImageView
            android:id="@+id/CoverLetterImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cover_letter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/ai_cover_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/write_cover_letter"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:fontFamily="@font/poppins_semi_bold"
            app:layout_constraintBottom_toTopOf="@id/subtext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CoverLetterImg"
            />

        <TextView
            android:id="@+id/subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/craft_standout_cover_letter"
            android:textAlignment="center"
            android:textColor="@color/gray_tx_color"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ai_cover_txt" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
